--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.14",
     "@azure/msal-browser": "^3.5.0",
-    "@azure/msal-react": "^2.0.7",
+    "@azure/msal-react": "^2.0.8",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
@@ -24,6 +24,8 @@
     "jest": "^29.4.3",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.1.0",
+    "powerbi-client": "^2.22.3",
+    "powerbi-client-react": "^1.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
